objects/Quota_Attainment__c.object
<CustomObject>
    <fields>
        <fullName>Bundle_Monthly__c</fullName>
        <label>Bundle Monthly</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>NBB_Licensing_Monthly__c</fullName>
        <label>NBB Licensing Monthly</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>NBB_PSG_Monthly__c</fullName>
        <label>NBB PSG Monthly</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Quota_Year__c</fullName>
        <label>Quota Year</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Renewal_Monthly__c</fullName>
        <label>Renewal Monthly</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Role__c</fullName>
        <label>Role</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Room_Nights_Monthly__c</fullName>
        <label>Room Nights Monthly</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Team_Role__c</fullName>
        <label>Team Role</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>User_Id__c</fullName>
        <label>User Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>User_Name__c</fullName>
        <label>User Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <customSettingsType>List</customSettingsType>
    <description>Contains data for Quota of every user.</description>
    <label>Quota Attainment</label>
    <listViews>
        <fullName>All_Fields</fullName>
        <columns>Quota_Year__c</columns>
        <columns>User_Name__c</columns>
        <columns>Team_Role__c</columns>
        <columns>User_Id__c</columns>
        <columns>Role__c</columns>
        <columns>NBB_Licensing_Monthly__c</columns>
        <columns>NBB_PSG_Monthly__c</columns>
        <columns>Renewal_Monthly__c</columns>
        <columns>Bundle_Monthly__c</columns>
        <columns>Room_Nights_Monthly__c</columns>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <label>All Fields</label>
        <language>en_US</language>
    </listViews>
</CustomObject>